# optimetal

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
optimetal/data/: dataset.py  loader.py  preprocess.py  transform.py
optimetal/evaluation/: __init__.py  ensemble_evaluator.py  evaluator.py
optimetal/factory/: __init__.py  loss.py  lr_scheduler.py  model.py  optim.py
optimetal/files/: plotstyle.mplstyle
optimetal/inference/: inference.py
optimetal/nn/: __init__.py  optimate.py  optimetal_2b.py  optimetal_2b_no_residual.py  optimetal_3b.py
optimetal/training/: trainer.py
optimetal/utils/: utils.py
research/: ablation_interaction_job.py  ablation_job.py  ablation_results.ipynb  ablation_study.py  ablation_study_interaction.py  db_analysis.py  db_compression.py  db_init.py  evaluate_model.ipynb  evaluate_model_ensemble.ipynb  get_gpu_hours.py  mlp_addnorm_ablation.py  mlp_addnorm_ablation_job.py  other_results.ipynb  scaling_law_base.py  scaling_law_base_job.py  scaling_law_grid.py  scaling_law_grid_job.py  scaling_law_results.ipynb  spectra_dim_study.py  spectra_dim_study_job.py  train_model.ipynb  train_model.py  train_model_job.py  train_model_with_lrwd_optim.py  train_subset_analysis.py  transformer_scaling.py  transformer_scaling_job.py  transformer_scaling_results.ipynb  write_out_splits.py
research/ablation_data/: 2b_edge_embedding_results.json  2b_interaction_configs.json  2b_interaction_results.json  2b_mp_results.json  2b_node_embedding_results.json  2b_pool_results.json  3b_mp_results.json  performance_improvement.txt
(+776 files in other folders)
